--- a/cnt/home.html
+++ b/cnt/home.html
@@ -1,3 +1,285 @@
-<article page_id="home">
-  <div>home</div>
+<article page_id="home" class="wrap">
+
+<!-- 로고 -->
+  <div class="logo">
+    <h1 class="tit hide">T인트로</h1>
+    <img src="res/img/icon_logo" alt="T인트로">
+  </div>
+<!-- end 로고 -->
+
+<!-- 검색어 입력창 -->
+  <div class="sch">
+    <h2 class="tit hide">검색어 입력창</h2>
+    <form name="sch_form" action="" method="get">
+      <input class="full" type="search" name="" placeholder="검색어를 입력하세요">
+      <button class="sch_btn" type="submit" name="sch_btn">
+        <img src="res/img/icon_search" alt="검색버튼">
+      </button>
+    </form>
+  </div>
+<!-- end 검색어 입력창 -->
+
+<!-- 즐겨찾기 -->
+  <div class="bmk">
+    <h2 class="tit hide">즐겨찾기 리스트</h2>
+    <ul class="clear">
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+      <li class="box">
+        <a class="link" href="#">
+          <img class="img" src="res/img/icon_dummy.png" alt="서비스명">
+          <p class="txt">서비스명</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+<!-- end 즐겨찾기 -->
+
+<!-- 광고출력 -->
+  <div class="ad_bnr">
+    <h2 class="tit hide">광고타이틀출력</h2>
+    <a href="#">
+      <img src="res/img/ad_tea_dummy.png" alt="광고타이틀">
+    </a>
+  </div>
+<!-- end 광고출력 -->
+
+<!-- 뉴스 슬라이드 -->
+  <div class="main_news swiper-container">
+    <div class="tit_wrap">
+      <h2 class="tit">뉴스 포커스</h2>
+      <a href="#">더보기</a>
+    </div>
+    <ul class="swiper-wrapper">
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </div>
+<!-- end 뉴스 슬라이드 -->
+
+<!-- 게임 슬라이드 -->
+  <div class="main_game swiper-container">
+    <div class="tit_wrap">
+      <h2 class="tit">게임</h2>
+      <a href="#">더보기</a>
+    </div>
+    <ul class="swiper-wrapper">
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="res/img/icon_dummy.png" alt="">
+          </div>
+          <div class="name">
+            <span class="cate_name"></span>
+            <span class="tit"></span>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </div>
+<!-- end 게임 슬라이드 -->
+
 </article>
