--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <title>T인트로</title>
   <link rel="stylesheet" href="./res/css/common.css">
   <link rel="stylesheet" href="./res/css/swiper.min.css">
+  <link rel="stylesheet" href="./res/css/home.css">
 </head>
 
 <body id="">
@@ -160,7 +161,7 @@
         var data = Object.keys(user_cate)[i],
           data_name = user_cate[Object.keys(user_cate)[i]];
 
-        $depth_1.append("<li class='swiper-slide n" + i + "'><a href='#" + data + "'>" + data_name + "</a></li>");
+        $depth_1.append("<li class='swiper-slide n" + i + "'><a class="+data+" href='#'>" + data_name + "</a></li>");
       }
       depth_1.update();
     }
@@ -185,33 +186,37 @@
 
     // page check
     var page_url = location.href,
-      page_hash = location.hash,
-      page_id = page_hash.replace("#", "");
+        page_hash = location.hash,
+        page_id = page_hash.replace("#", "");
 
     (function() {
       document.body.setAttribute('id', page_id);
     }());
     // page check end
 
+    var this_el_catch = function (){
+        if(page_hash == "") {
+            return $("#nav_1 .home");
+        } else {
+            return $("#nav_1 ."+page_hash.replace('#',''));
+        }
+    }
 
-    // // cnt slide
-    // var this_el = $(''),
-    //     next_el = this_el.closest("li").next().children(),
-    //     prev_el = this_el.closest("li").prev().children(),
-    //     naxt_hash = next_el.attr("href"),
-    //     prev_hash = prev_el.attr("href");
-    //
-    //
-    //   function page_load() {
-    //     $("#active_page").load("./cnt/"+ this_el.attr('data-id') + ".html");
-    //     $("#prev_page").load("./cnt/"+ prev_el.attr('data-id') + ".html");
-    //     $("#next_page").load("./cnt/"+ next_el.attr('data-id') + ".html");
-    //   }
-    //
-    //   $(function(){
-    //     this_el.addClass('on');
-    //     page_load();
-    //   });
+    var this_el = this_el_catch(),
+        next_el = this_el.closest("li").next().children(),
+        prev_el = this_el.closest("li").prev().children();
+
+
+    function page_load() {
+      $("#active_page").load("./cnt/"+ this_el.attr('class') + ".html");
+      $("#prev_page").load("./cnt/"+ prev_el.attr('class') + ".html");
+      $("#next_page").load("./cnt/"+ next_el.attr('class') + ".html");
+    }
+
+    $(function(){
+      this_el.closest('li').addClass('on');
+      page_load();
+    });
 
 
 
