--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
       initialSlide: 1,
       autoHeight: true,
       freeMode: false,
-      // on: {
-      //   slideChangeTransitionEnd: function () {
-      //     page_load();
-      //   },
-      // }
+      on: {
+        slideChangeTransitionEnd: function () {
+          page_load();
+        },
+      }
     });
   </script>
 </body>
