--- a/cnt/home.html
+++ b/cnt/home.html
@@ -90,92 +90,92 @@
       <h2 class="tit">뉴스 포커스</h2>
       <a href="#">더보기</a>
     </div>
-    <ul class="swiper-wrapper">
+    <ul class="cnt_type1 swiper-wrapper">
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
@@ -189,92 +189,92 @@
       <h2 class="tit">게임</h2>
       <a href="#">더보기</a>
     </div>
-    <ul class="swiper-wrapper">
+    <ul class="cnt_type1 swiper-wrapper">
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
       <li class="swiper-slide">
         <a href="#">
           <div class="img_wrap">
-            <img src="res/img/icon_dummy.png" alt="">
+            <img src="res/img/icon_dummy.png" alt="타이틀출력">
           </div>
           <div class="name">
-            <span class="cate_name"></span>
-            <span class="tit"></span>
+            <span class="cate_name">카테고리</span>
+            <span class="tit">타이틀출력</span>
           </div>
         </a>
       </li>
