--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
       $("#active_page").load("./cnt/"+ this_el.attr('class') + ".html");
       $("#prev_page").load("./cnt/"+ prev_el.attr('class') + ".html");
       $("#next_page").load("./cnt/"+ next_el.attr('class') + ".html");
+      cnt_slider.update();
     }
 
     $(function(){
@@ -232,17 +233,16 @@
       autoHeight: true,
       freeMode: false,
       on: {
-        slideChangeTransitionEnd: function () {
+        slideNextTransitionEnd: function () {
+          cnt_slider.removeSlide(0);
+          cnt_slider.appendSlide('<div class="swiper-slide"><div id="next_page"></div></div>');
           $('.swiper-slide-active > div').attr('id','active_page');
-          var cnt_el = $('.cnt_slider .cnt_el');
-
-          if ( cnt_el.eq(0).hasClass('swiper-slide-active')) {
-              cnt_slider.removeSlide(2);
-              cnt_slider.prependSlide('<div class="swiper-slide"><div id="next_page"></div></div>');
-          } else if(cnt_el.eq(2).hasClass('swiper-slide-active')) {
-              cnt_slider.removeSlide(0);
-              cnt_slider.appendSlide('<div class="swiper-slide"><div id="prev_page"></div></div>');
-          }
+          page_load();
+        },
+        slidePrevTransitionEnd: function () {
+          cnt_slider.removeSlide(2);
+          cnt_slider.prependSlide('<div class="swiper-slide"><div id="prev_page"></div></div>');
+          $('.swiper-slide-active > div').attr('id','active_page');
           page_load();
         },
       }
