--- a/index.html
+++ b/index.html
@@ -232,15 +232,17 @@
       autoHeight: true,
       freeMode: false,
       on: {
-        slideNextTransitionEnd: function () {
-          cnt_slider.removeSlide(0);
-          cnt_slider.appendSlide('<div class="swiper-slide swiper-slide-next"><div id="next_page"></div></div>');
-          $('.swiper-slide-active > div').attr('id','active_page');
-          page_load();
-        },
-        slidePrevTransitionEnd: function () {
-          cnt_slider.removeSlide(2);
-          cnt_slider.prependSlide('<div class="swiper-slide swiper-slide-prev"><div id="prev_page"></div></div>');
+        slideChangeTransitionEnd: function () {
+          var cnt_el = $('.cnt_slider .cnt_el');
+
+          if ( cnt_el.eq(0).hasClass('swiper-slide-active')) {
+              cnt_slider.removeSlide(2);
+              cnt_slider.prependSlide('<div class="swiper-slide swiper-slide-next"><div id="next_page"></div></div>');
+          } else if(cnt_el.eq(2).hasClass('swiper-slide-active')) {
+              cnt_slider.removeSlide(0);
+              cnt_slider.appendSlide('<div class="swiper-slide swiper-slide-prev"><div id="prev_page"></div></div>');
+          }
+
           $('.swiper-slide-active > div').attr('id','active_page');
           page_load();
         },
