--- a/index.html
+++ b/index.html
@@ -125,15 +125,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./res/js/swiper.min.js" charset="utf-8"></script>
   <script>
-    $(function() {
-      $("#btn_menu").click(function() {
-        $(this).toggleClass('on');
-        $("#mypage").toggleClass('on');
-      });
-    });
 
-    // depth_1 load
-    var user_cate = {
+// Start [Global 변수 선언]
+  let user_cate = {
         game: "게임",
         car: "자동차",
         shopping: "쇼핑",
@@ -142,20 +136,24 @@
         enter: "연예",
         sports: "스포츠"
       },
-      cate_length = Object.keys(user_cate).length,
-      $depth_1 = $('.depth_1 ul');
+      page_id = location.hash.replace("#", "");
+// End [변수 선언]
 
-    function cate_load() {
-      for (var i = 0; i < cate_length; i++) {
-        var data = Object.keys(user_cate)[i],
+
+// Start [1depth 메뉴 로드 ->> cate_load()]
+  function cate_load() {
+
+    const $depth_1 = $('.depth_1 ul'),
+          cate_length = Object.keys(user_cate).length;
+
+    for (let i = 0; i < cate_length; i++) {
+      let data = Object.keys(user_cate)[i],
           data_name = user_cate[Object.keys(user_cate)[i]];
 
-        $depth_1.append("<li class='swiper-slide n" + i + "'><a class="+data+" href='#'>" + data_name + "</a></li>");
-      }
-      depth_1.update();
+      $depth_1.append("<li id="data" class='swiper-slide'><a href='#'>" + data_name + "</a></li>");
     }
 
-    var depth_1 = new Swiper('.depth_1', {
+    let depth_1 = new Swiper('.depth_1', {
       slidesPerView: 'auto',
       spaceBetween: 0,
       centeredSlides: false,
@@ -167,49 +165,65 @@
       freeMode: true
     });
 
-    (function() {
+  }
+// << End "1depth 메뉴"
+
+  let this_el_catch = function (){
+      const page_hash = location.hash;
+
+      if(page_hash == "") {
+        $("#home");
+      } else {
+        $(page_hash);
+      }
+  }
+
+  let page_open_load = function () {
+    let this_el = this_el_catch(),
+        next_el = this_el.next(),
+        prev_el = this_el.prev();
+
+    $("#active_page").load("./cnt/"+ this_el.attr('class') + ".html");
+    $("#prev_page").load("./cnt/"+ prev_el.attr('class') + ".html");
+    $("#next_page").load("./cnt/"+ next_el.attr('class') + ".html");
+    this_el.closest('li').addClass('on');
+  }
+
+
+    $(function() {
+      $("#btn_menu").click(function() {
+        $(this).toggleClass('on');
+        $("#mypage").toggleClass('on');
+      });
+
       cate_load();
-    }());
-    // depth_1 end
-
-
-    // page check
-    var page_url = location.href,
-        page_hash = location.hash,
-        page_id = page_hash.replace("#", "");
-
-    (function() {
-      document.body.setAttribute('id', page_id);
-    }());
-    // page check end
-
-    var this_el_catch = function (){
-        if(page_hash == "") {
-            return $("#nav_1 .home");
-        } else {
-            return $("#nav_1 ."+page_hash.replace('#',''));
-        }
-    }
-
-    var this_el = this_el_catch(),
-        next_el = this_el.closest("li").next().children(),
-        prev_el = this_el.closest("li").prev().children();
-
-
-    var page_load = function () {
-      $("#active_page").load("./cnt/"+ this_el.attr('class') + ".html");
-      $("#prev_page").load("./cnt/"+ prev_el.attr('class') + ".html");
-      $("#next_page").load("./cnt/"+ next_el.attr('class') + ".html");
-    }
-
-    $(function(){
-      this_el.closest('li').addClass('on');
-      page_load();
+      $('body').attr('id', 'pid_'+page_id);
     });
 
 
+// "페이지 초기 체크 및 로드" Start >> 페이지 초기값 변수 설정후 함수로 변환
 
-    // 서브메뉴 슬라이더
+
+
+
+    var page_open_load = function () {
+      var this_el = this_el_catch(),
+          next_el = this_el.closest("li").next().children(),
+          prev_el = this_el.closest("li").prev().children();
+
+      $("#active_page").load("./cnt/"+ this_el.attr('class') + ".html");
+      $("#prev_page").load("./cnt/"+ prev_el.attr('class') + ".html");
+      $("#next_page").load("./cnt/"+ next_el.attr('class') + ".html");
+      this_el.closest('li').addClass('on');
+    }
+
+    $(function(){
+      page_open_load();
+    });
+// << End "페이지 초기 체크 및 로드"
+
+
+// 서브메뉴 슬라이더
     var depth_2 = new Swiper('.depth_2', {
       slidesPerView: 'auto',
       spaceBetween: 16,
@@ -221,9 +235,34 @@
       },
       freeMode: true
     });
+// 서브메뉴 슬라이더 끝
 
 
-    // 컨텐츠 슬라이더
+// "컨텐츠 슬라이더" START >>
+    var cnt = $('#cnt'),
+        cnt_wrap = cnt.children().eq(0);
+
+
+    var cnt_move = function () {
+      var cnt_el = cnt_wrap.children(),
+          this_el = this_el_catch(),
+          next_el = this_el.closest("li").next().children(),
+          prev_el = this_el.closest("li").prev().children();
+
+      if(prev 이동) {
+        url 해시 변경
+
+          cnt_wrap.prepend(cnt_el.eq(2)).load("./cnt/"+ prev_el.attr('class') + ".html");
+
+      } else if (next 이동) {
+          cnt_wrap.append(cnt_el.eq(0));
+      }
+
+      cnt_wrap.children().eq(0).attr('class', 'cnt_el swiper-slide swiper-slide-prev');
+      cnt_wrap.children().eq(1).attr('class', 'cnt_el swiper-slide swiper-slide-active');
+      cnt_wrap.children().eq(2).attr('class', 'cnt_el swiper-slide swiper-slide-next');
+    }
+
     var cnt_slider = new Swiper('.cnt_slider', {
       slidesPerView: 1,
       spaceBetween: 0,
@@ -237,10 +276,10 @@
 
           if ( cnt_el.eq(0).hasClass('swiper-slide-active')) {
               cnt_slider.removeSlide(2);
-              cnt_slider.prependSlide('<div class="swiper-slide swiper-slide-next"><div id="next_page"></div></div>');
+              cnt_el.eq(0).before('<div class="swiper-slide swiper-slide-prev"><div id="prev_page"></div></div>');
           } else if(cnt_el.eq(2).hasClass('swiper-slide-active')) {
               cnt_slider.removeSlide(0);
-              cnt_slider.appendSlide('<div class="swiper-slide swiper-slide-prev"><div id="prev_page"></div></div>');
+              cnt_el.eq(2).after('<div class="swiper-slide swiper-slide-next"><div id="next_page"></div></div>');
           }
 
           $('.swiper-slide-active > div').attr('id','active_page');
@@ -248,6 +287,7 @@
         },
       }
     });
+// << END "컨텐츠 슬라이더"
   </script>
 </body>
 
